# JUAMP

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.py  juamp.cpp  xmake.lua
include/: declarations.h  declarations.hpp
src/: aspergillia.cpp  cinema.cpp  constants.hpp  declarations.h  declarations.hpp  economics.cpp  game.cpp  gui.cpp  locations.cpp  main.cpp  market_hall.cpp  newspaper.cpp  nopsania.cpp  parks.cpp  restaurant.cpp  ropucha.cpp  start.cpp  talking.cpp  trains.cpp
src/apis/: basics.cpp  external.cpp  money.cpp  player.cpp  reputation.cpp  stats.cpp  talking.cpp
src/internal/: console.cpp  juamp-main.cpp  timers.cpp
src/places/: aspergillia.cpp  cinema.cpp  home.cpp  market_hall.cpp  nopsania.cpp  outside.cpp  parks.cpp  restaurant.cpp  ropucha.cpp  school.cpp  trains.cpp
src/places/cities/: aspergillia.cpp  nopsania.cpp
src/places/hometown/: cinema.cpp  market_hall.cpp  parks.cpp  restaurant.cpp  ropucha.cpp
